@@ -772,6 +772,8 @@ Release 0.23.0 - Unreleased
     HDFS-2500. Avoid file system operations in BPOfferService thread while
     processing deletes. (todd)
 
+    HDFS-2465. Add HDFS support for fadvise readahead and drop-behind. (todd)
+
   BUG FIXES
 
     HDFS-2344. Fix the TestOfflineEditsViewer test failure in 0.23 branch.
